--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/CategorieProduit/new.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/CategorieProduit/new.html.twig
@@ -1,13 +1,13 @@
 {#% extends '::base.html.twig' %}
 
 {% block body -%
-    <h1>CathegorieProduit creation</h1>
+    <h1>CategorieProduit creation</h1>
 #}
     {{ form(form) }}
 
    {#     <ul class="record_actions">
     <li>
-        <a href="{{ path('cathegorieproduit') }}">
+        <a href="{{ path('categorieproduit') }}">
             Back to the list
         </a>
     </li>
