--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/CategorieProduit/edit.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/CategorieProduit/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>CathegorieProduit edit</h1>
+    <h1>CategorieProduit edit</h1>
 
     {{ form(edit_form) }}
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('cathegorieproduit') }}">
+        <a href="{{ path('categorieproduit') }}">
             Back to the list
         </a>
     </li>
