--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/pizza.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/pizza.html.twig
@@ -1,52 +1,11 @@
 {% include 'Nfe102RestoBundle:Default:cart.js.twig' %}
+<script type="text/javascript">
+ $(document).ready(function() {listesproductshow();});
+</script>
 
-{# TODO fonction génération liste #}
-<table class="table table-hover">
-    <tr>                   
-        <td>
-            <div class="produitCont">
-                <img src="{{ asset('bundles/nfe102resto/images/') }}78685674.jpg" height="67" width="100" class="img-rounded"/>
-                <span>Description</span>
-            </div>
-        </td>
-        <td>
-            <span class="prix">
-                15.60 &euro;
-            </span>
-        </td>
-        <td>
-            <span class="qté">
-                <button type="button" class="btn btn-default btn-lg" onclick="javascript:modal('78685674'),cartshow();">
-  <span class="glyphicon glyphicon-shopping-cart"></span> Ajouter au panier
-</button>
-
-                {#<button class="btn btn-default btn-sm glyphicon glyphicon-shopping-cart" type="button" onclick="javascript:modcart('more',$('[name=idProd]').val())" value="Ajouter au panier"/>#}
-            </span>
-        </td>
-    </tr>
-        <tr>                   
-        <td>
-            <div class="produitCont">
-                <img src="{{ asset('bundles/nfe102resto/images/') }}78685675.jpg" height="67" width="100" class="img-rounded"/>
-                <span>Description</span>
-            </div>
-        </td>
-        <td>
-            <span class="prix">
-                15.90 &euro;
-            </span>
-        </td>
-        <td>
-            <span class="qté">
-                <button type="button" class="btn btn-default btn-lg" onclick="javascript:modal('78685675'),cartshow();">
-  <span class="glyphicon glyphicon-shopping-cart"></span> Ajouter au panier
-</button>
-
-                {#<button class="btn btn-default btn-sm glyphicon glyphicon-shopping-cart" type="button" onclick="javascript:modcart('more',$('[name=idProd]').val())" value="Ajouter au panier"/>#}
-            </span>
-        </td>
-    </tr>
-
+<table class="table table-hover tableliste">
+    
+    
 </table> 
 
     <!-- Button to trigger modal -->
@@ -60,7 +19,7 @@
     </div>
     <div class="modal-body">
         <input type="hidden" name="articleId" id="articleId" value=""/>
-                    <table class="cart table table-striped table-responsive">
+                    <table class="cart table table-striped table-bordered table-hover table-responsive">
                     <tr class="showcart">
                         <th>Produit(s)</th>
                         <th></th>
