Correction affichage panier

--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.html.twig
@@ -47,5 +47,6 @@
                 </table>
                 
                 <input type="button" value="Commander" class="btn btn-danger" onclick="{#{ path('nfe102_resto_cmd') }#}">
+                <input type="button" value="test" class="btn btn-danger" onclick="javascript:getprodvalue(1)">
                 
                         
