--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/carte.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/carte.html.twig
@@ -1,1 +1,5 @@
-{# empty Twig template #}
+{% include 'Nfe102RestoBundle:Default:contentpage.html.twig' %}           
+{% block menuid %}  
+ <input type="hidden" name="categorietype" id="categorietype" value="CARTE"/>
+  <input type="hidden" name="defaultimg" id="defaultimg" value="*.jpg"/>
+{% endblock %}
