Ajout affichage categories

--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.js.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.js.twig
@@ -155,7 +155,7 @@ function catproduct(id) {
     type: "POST",
     url: "{{ path('produit_jsonshow') }}",
     dataType: 'json',
-  //  async: false,
+    async: false,
     success: function(liste){
         
        var showtable = '';
