Preparation admin page

--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Produit/edit.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Produit/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'Nfe102RestoBundle:Default:layout.html.twig' %}
+{#% extends 'Nfe102RestoBundle:Default:layout.html.twig' %#}
 
 {% block body -%}
     <h1>Produit edit</h1>
