Ajout total acticles

--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.html.twig
@@ -31,6 +31,7 @@
                             <span>Total produits</span>
                             <span class="sum"></span>
                         </td>
+                        <td class="totprod"></td>
                     </tr>
                     <tr>
 
